<resources>
    <string name="app_name">TestApplication</string>
    <string name="toast_button">About Me</string>
    <string name="clicky_button">Clicky Clicky</string>
    <string name="button_a">A</string>
    <string name="button_b">B</string>
    <string name="button_c">C</string>
    <string name="button_d">D</string>
    <string name="button_e">E</string>
    <string name="button_f">F</string>
    <string name="pressed_text">Pressed: </string>
    <string name="personal_info">Name: Boyang Gao\nEmail: gao.boy@northeastern.edu</string>
    <string name="link_collector_button">Link Collector</string>
    <string name="prime_button">Prime</string>
    <string name="find_primes">Find Primes</string>
    <string name="terminate_search">Terminate Search</string>
    <string name="pacifier_switch">Pacifier Switch</string>
    <string name="back_prompt">Are you sure to terminate?</string>
    <string name="location_button">Location</string>
    <string name="reset_distance_button">Reset Distance</string>
</resources>