<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ClickyClicky">

    <Button
        android:id="@+id/button_a"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="AonClick"
        android:text="@string/button_a"
        app:layout_constraintBottom_toTopOf="@id/button_d"
        app:layout_constraintEnd_toStartOf="@id/button_b"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintBottom_toTopOf="@id/button_d" />

    <Button
        android:id="@+id/button_b"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="BonClick"
        android:text="@string/button_b"
        app:layout_constraintBottom_toTopOf="@id/button_e"
        app:layout_constraintEnd_toStartOf="@id/button_c"
        app:layout_constraintStart_toEndOf="@+id/button_a"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_c"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="ConClick"
        android:text="@string/button_c"
        app:layout_constraintBottom_toTopOf="@id/button_f"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_b"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_d"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="DonClick"
        android:text="@string/button_d"
        app:layout_constraintBottom_toTopOf="@id/pressed_text"
        app:layout_constraintEnd_toStartOf="@id/button_e"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_a" />

    <Button
        android:id="@+id/button_e"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="EonClick"
        android:text="@string/button_e"
        app:layout_constraintBottom_toTopOf="@id/pressed_text"
        app:layout_constraintEnd_toStartOf="@id/button_f"
        app:layout_constraintStart_toEndOf="@id/button_d"
        app:layout_constraintTop_toBottomOf="@id/button_b" />

    <Button
        android:id="@+id/button_f"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="FonClick"
        android:text="@string/button_f"
        app:layout_constraintBottom_toTopOf="@id/pressed_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/button_e"
        app:layout_constraintTop_toBottomOf="@id/button_c" />

    <TextView
        android:id="@+id/pressed_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_e" />
</androidx.constraintlayout.widget.ConstraintLayout>